--- a/app/globals.css
+++ b/app/globals.css
@@ -71,7 +71,7 @@
 }
 
 .home__filter-container {
-  @apply flex justify-start flex-wrap items-center gap-2;
+  @apply flex flex-wrap justify-start items-center gap-2;
 }
 
 .home__cars-wrapper {
@@ -203,7 +203,7 @@
 }
 
 .search-manufacturer__input {
-  @apply w-full h-[48px] pl-12 p-4 rounded-l-full max-sm:rounded-full bg-light-white outline-none cursor-pointer text-sm;
+  @apply w-full h-[48px] pl-12 p-4 bg-light-white outline-none cursor-pointer text-sm;
 }
 
 .search-manufacturer__options {
