--- a/app/globals.css
+++ b/app/globals.css
@@ -56,7 +56,7 @@
 }
 
 .hero__image-overlay {
-  @apply absolute xl:-top-24 xl:-right-1/2 -right-1/4 bg-hero-bg bg-repeat-round -z-10 w-full xl:h-screen h-[590px] overflow-hidden;
+  @apply absolute xl:-top-24 xl:-right-1/2 -right-1/4 bg-hero-bg bg-repeat-round -z-10 w-full xl:h-screen h-[600px];
 }
 /* END: Hero styles */
 
@@ -145,7 +145,8 @@
 
 /* START: Custom Filter styles */
 .custom-filter__btn {
-  @apply relative w-full min-w-[127px] flex justify-between items-center cursor-default rounded-lg bg-white py-2 px-3 text-left shadow-md sm:text-sm border;
+  @apply relative w-full min-w-[127px] h-[48px] flex justify-between items-center cursor-default rounded-lg bg-light-white py-2 px-3 text-left sm:text-sm shadow-md overflow-auto
+  ring-1 ring-black ring-opacity-5;
 }
 
 .custom-filter__options {
@@ -193,7 +194,7 @@
 }
 
 .searchbar__input {
-  @apply w-full h-[48px] pl-12 p-4 bg-light-white rounded-r-full max-sm:rounded-full outline-none cursor-pointer text-sm;
+  @apply w-full h-[48px] pl-12 p-4 bg-light-white outline-none cursor-pointer text-sm;
 }
 /* END: searchbar styles */
 
