--- a/app/globals.css
+++ b/app/globals.css
@@ -194,7 +194,7 @@
 }
 
 .searchbar__input {
-  @apply w-full h-[48px] pl-12 p-4 bg-light-white outline-none cursor-pointer text-sm;
+  @apply w-full h-[48px] pl-12 bg-light-white outline-none cursor-pointer text-sm;
 }
 /* END: searchbar styles */
 
